--- a/licenses/MIT.ejs
+++ b/licenses/MIT.ejs
@@ -7,7 +7,7 @@
     <%- gravatar %>
     <h1>The MIT License (MIT)</h1>
 
-    <p>Copyright © <%- info %></p>
+    <p>Copyright © 2024 Manveer Singh</p>
 
     <p>Permission is hereby granted, free of charge, to any person obtaining a copy
       of this software and associated documentation files (the “Software”), to deal
